hypr_backend/kubernetes/service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: _APP_NAME
  name: _APP_NAME
  namespace: _NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: _APP_NAME
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: _APP_NAME
      annotations:
        log.config.scalyr.com/include: "true"
        log.config.scalyr.com/istio-proxy.exclude: "true"
    spec:
      containers:
        - image: gcr.io/_PROJECT_ID/_APP_NAME:BUILD_ID
          command:
            [
              "bash",
              "-c",
              "db-migrate up --config config/database.json && node app.js",
            ]
          imagePullPolicy: Always
          name: _APP_NAME
          ports:
            - containerPort: _APP_PORT
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: _APP_NAME
  name: _APP_NAME
  namespace: _NAMESPACE
spec:
  ports:
    - port: _APP_PORT
      protocol: TCP
      targetPort: _APP_PORT
      name: _PROTOCOL_HTTP
  selector:
    app: _APP_NAME
  type: ClusterIP

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: _APP_NAME
  namespace: _NAMESPACE
spec:
  hosts:
    - "_HOST"
  gateways:
    - istio-autogenerated-k8s-ingress.istio-system
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: _APP_NAME
            port:
              number: _APP_PORT
